# bigpipe

./: Cargo.toml  README.md  build.rs
docs/: design.md
proto/: log.proto  message.proto  namespace.proto  wal.proto
src/: client.rs  data_types.rs  lib.rs  metrics.rs  retention.rs  server.rs  wal.rs
src/data_types/: log.rs  message.rs  mod.rs  namespace.rs  value.rs  wal.rs
src/log/: mod.rs  multi.rs  single.rs
src/wal/: mod.rs  multi.rs  single.rs  wal.rs
