[package]
name = "bigpipe"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1.10.1", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive", "env"] }
hashbrown = "0.15.3"
parking_lot = "0.12.3"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
